@@ -1,4 +1,18 @@
-# TechSave-Phoenix v14052020|Dev by darkk!
+# TechSave-Phoenix v23052020|Dev by darkk!
+
+
+                      ___________             .__       _________                      
+                      \__    ___/____   ____  |  |__   /   _____/_____  ___  __  ____  
+                        |    | _/ __ \_/ ___\ |  |  \  \_____  \ \__  \ \  \/ /_/ __ \ 
+                        |    | \  ___/\  \___ |   Y  \ /        \ / __ \_\   / \  ___/ 
+                        |____|  \___  >\___  >|___|  //_______  /(____  / \_/   \___  >
+                             _______\/_ .__\/      \/         \/      \/.__         \/ 
+                             \______   \|  |__    ____    ____    ____  |__|___  ___   
+                              |     ___/|  |  \  /  _ \ _/ __ \  /    \ |  |\  \/  /   
+                              |    |    |   Y  \(  <_> )\  ___/ |   |  \|  | >    <    
+                              |____|    |___|  / \____/  \___  >|___|  /|__|/__/\_ \   
+                                             \/              \/      \/           \/   
+
 
 **TS-P** [*TechSave-Phoenix*] Is an personal learning project for calculating money towards new computer parts!
 
